fix buttons alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@
     width:80%;
 }
 
+@media screen and (max-width:850px){
+    .table{
+        width: 95%;
+    }
+}
+@media screen and (max-width:710px){
+    .table{
+        width: 95%;
+    }
+    
 
+}
 
 
